--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -86,222 +86,62 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class=" dropdown dropdown-hover">
-                            <a href="store-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Store <span class="caret"></span>
-                                <span class="label">games</span>
+                            <a href="https://u.pcloud.link/publink/show?code=kZrCrzXZhdGpSsrmObLzAJ97PbAxsVzx86FV"> Clips <span class="label"></span>
+                                <span class="label">plays</span>
                             </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="store-1.html"> Store Style 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="store-2.html"> Store Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="cart.html"> Cart </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="store-product-1.html"> Product Style1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="store-product-2.html"> Product Style 2 </a>
-                                    </li>
-                                    <li>
-                                        <a href="checkout.html"> Checkout </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
-                        <li class="active dropdown dropdown-hover">
-                            <a href="blog-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Blog <span class="caret"></span>
-                                <span class="label">news</span>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="https://botisimo.com/u/classiccaleb/commands"> Commands <span class="label"></span>
+                                <span class="label">botisimo</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%66%6F%40%63%6C%61%73%73%69%63%63%61%6C%65%62%2E%70%72%6F"> Contact <span class="label"></span>
+                                <span class="label">email</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="https://botisimo.com/u/classiccaleb/leaderboard/global"> Leaderboard <span class="label"></span>
+                                <span class="label">community</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Platforms <span class="caret"></span>
+                                <span class="label">find me</span>
                             </a>
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="blog-1.html"> Blog Style 1 </a>
+                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
                                     </li>
                                     <li>
-                                        <a href="blog-2.html"> Blog Style 2 </a>
+                                        <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
                                     </li>
-                                    <li class="active">
-                                        <a href="blog-3.html"> Blog Style 3 </a>
+                                    <li>
+                                        <a href="https://trovo.live/ClassicCaleb"> Trovo </a>
                                     </li>
                                 </ul>
                                 <ul role="menu">
                                     <li>
-                                        <a href="blog-post-1.html"> Blog Post 1 </a>
+                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
                                     </li>
                                     <li>
-                                        <a href="blog-post-2.html"> Blog Post 2 </a>
+                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
                                     </li>
                                     <li>
-                                        <a href="blog-post-3.html"> Blog Post 3 </a>
+                                        <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="components.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Features <span class="caret"></span>
-                                <span class="label">full list</span>
+                            <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
+                                <span class="label">parts</span>
                             </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="forums.html"> Forums </a>
-                                    </li>
-                                    <li>
-                                        <a href="forums-topics.html"> Forums Topics </a>
-                                    </li>
-                                    <li>
-                                        <a href="forums-single-topic.html"> Forums Single Topic </a>
-                                    </li>
-                                    <li>
-                                        <a href="matches-list.html"> Matches List </a>
-                                    </li>
-                                    <li>
-                                        <a href="match.html"> Match </a>
-                                    </li>
-                                    <li>
-                                        <a href="match-2.html"> Match with Maps </a>
-                                    </li>
-                                    <li>
-                                        <a href="login.html"> Login </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="widgets.html"> Widgets <span class="badge bg-default">New</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="components.html"> Components </a>
-                                    </li>
-                                    <li>
-                                        <a href="coming-soon.html"> Coming Soon </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html"> Contact Us </a>
-                                    </li>
-                                    <li>
-                                        <a href="search.html"> Search </a>
-                                    </li>
-                                    <li>
-                                        <a href="404.html"> 404 </a>
-                                    </li>
-                                    <li>
-                                        <a href="blank.html"> Blank </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class=" dropdown dropdown-hover">
-                            <a href="user-activity.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> KuroKy <span class="badge bg-default">8</span>
-                                <span class="caret"></span>
-                                <span class="label">user</span>
-                            </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="user-activity.html"> Activity </a>
-                                    </li>
-                                    <li>
-                                        <a href="user-profile.html"> Profile </a>
-                                    </li>
-                                    <li>
-                                        <a href="user-messages.html"> Messages <span class="badge bg-default">8</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="user-messages-compose.html"> Messages Compose </a>
-                                    </li>
-                                    <li>
-                                        <a href="user-settings.html"> Settings </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://nkdev.info/docs/youplay-html/"> Documentation </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://1.envato.market/youplayhtmlinfo"> Purchase </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a class="search-toggle" href="search.html">
-                                <i class="fa fa-search"></i>
-                            </a>
-                        </li>
-                        <li class="dropdown dropdown-hover dropdown-cart">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                <i class="fa fa-shopping-cart"></i>
-                            </a>
-                            <div class="dropdown-menu">
-                                <div class="row youplay-side-news">
-                                    <div class="col-xs-3 col-md-4">
-                                        <a href="#" class="angled-img">
-                                            <div class="img">
-                                                <img src="assets/images/dark/game-bloodborne-500x375.jpg" alt="">
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-xs-9 col-md-8">
-                                        <a href="#" class="pull-right mr-10"><i class="fa fa-times"></i></a>
-                                        <h4 class="ellipsis"><a href="#">Bloodborne</a></h4>
-                                        <span class="quantity">1 × <span class="amount">$50.00</span></span>
-                                    </div>
-                                </div>
-                                <div class="row youplay-side-news">
-                                    <div class="col-xs-3 col-md-4">
-                                        <a href="#" class="angled-img">
-                                            <div class="img">
-                                                <img src="assets/images/dark/game-kingdoms-of-amalur-reckoning-500x375.jpg" alt="">
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-xs-9 col-md-8">
-                                        <a href="#" class="pull-right mr-10"><i class="fa fa-times"></i></a>
-                                        <h4 class="ellipsis"><a href="#">Kingdoms of Amalur</a></h4>
-                                        <span class="quantity">1 × <span class="amount">$20.00</span></span>
-                                    </div>
-                                </div>
-                                <div class="ml-20 mr-20 pull-right"><strong>Subtotal:</strong> <span class="amount">$70.00</span></div>
-                                <div class="btn-group pull-right m-15">
-                                    <a href="#" class="btn btn-default btn-sm">View Cart</a>
-                                    <a href="#" class="btn btn-default btn-sm">Checkout</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown dropdown-hover dropdown-user">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">
-                                <i class="fa fa-user"></i>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="dropdown-menu">
-                                <form class="navbar-login-form" action="#" method="post">
-                                    <p>Username:</p>
-                                    <div class="youplay-input">
-                                        <input type="text" name="log">
-                                    </div>
-                                    <p>Password:</p>
-                                    <div class="youplay-input">
-                                        <input type="password" name="pwd">
-                                    </div>
-                                    <div class="youplay-checkbox mb-15 ml-5">
-                                        <input type="checkbox" name="rememberme" value="forever" id="nav-rememberme">
-                                        <label for="nav-rememberme">Remember Me</label>
-                                    </div>
-                                    <button class="btn btn-sm ml-0 mr-0" name="submit">Log In</button>
-                                    <br>
-                                    <p>
-                                        <a class="no-fade" href="#">Lost password?</a> | <a href="#" class="no-fade" data-toggle="modal" data-target="#nav-registration">Register</a>
-                                    </p>
-                                </form>
-                            </div>
+                        </a>
                         </li>
                     </ul>
                 </div>
